--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
 		"react-dom": "^16.12.0",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.1.2",
+		"react-router-hash-link": "^1.2.2",
 		"react-scripts": "3.4.0",
 		"react-tippy": "^1.3.4",
+		"react-toast-notification": "^1.1.4",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
-		"redux-logger": "^3.0.6"
+		"redux-logger": "^3.0.6",
+		"redux-persist": "^6.0.0",
+		"redux-persist-transform-filter": "0.0.20"
 	},
 	"scripts": {
 		"start": "react-scripts start",
