--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-redux": "^7.2.0",
+		"react-redux-firebase": "^3.4.0",
 		"react-router-dom": "^5.1.2",
 		"react-router-hash-link": "^1.2.2",
 		"react-scripts": "3.4.0",
 		"react-tippy": "^1.3.4",
-		"react-toast-notification": "^1.1.4",
+		"react-toastify": "^5.5.0",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
+		"redux-firestore": "^0.13.0",
 		"redux-logger": "^3.0.6",
 		"redux-persist": "^6.0.0",
 		"redux-persist-transform-filter": "0.0.20"
